--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "source": "/api/:path*",
             "destination": "https://api.vanquyenhair.name.vn/api/:path*"
+        },
+        {
+            "source": "/((?!api/).*)",
+            "destination": "/index.html"
         }
     ]
 }
